test/corpus/blocks.txt
====
code
====

{[
let x = 1
]}

---

(source_file
  (text)
  (code
    (code_contents))
  (text))

========
language
========

{@python[
pass
]}

---

(source_file
  (text)
  (code
    (language_name)
    (code_contents))
  (text))

=========
multiline
=========

{@python[
pass

pass
]}

---

(source_file
  (text)
  (code
    (language_name)
    (code_contents))
  (text))

================
custom delimiter
================

{foo@text[
Code block with {[inner code block syntax]}
]foo}

{@python[
1+1
]}

---

(source_file
  (text)
  (code)
  (text)
  (code
    (language_name)
    (code_contents))
  (text))

===============
bracket in code
===============

{@python[
[i+1 for i in xrange(2)]
]}

---

(source_file
  (text)
  (code
    (language_name)
    (code_contents))
  (text))
